# modekeeper

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.github/: SECURITY.md  pull_request_template.md
docs/: APPLY_SPEC.md  ARCHITECTURE.md  BOUNDARY_INVENTORY_PUBLIC.md  BUYER_10MIN.md  BUYER_JOURNEY.md  BUYER_PROOF_PACK.md  BUYER_REQUEST_CHECKLIST.md  CHORDS.md  CHORDS_INTERNAL.md  CLI_CONTRACTS.md  CLI_REFERENCE.md  COMPLIANCE_MATRIX.md  CUSTOM_PASSPORTS.md  DEFINITION_OF_DONE.md  DEV_GUIDE.md  DEV_MINIKUBE_GPU.md  DISTRIBUTION_POLICY.md  ENTERPRISE_EVALUATION.md  FORCED_OPPORTUNITY_SCENARIOS.md  GETTING_STARTED.md  HANDOFF.md  HANDOFF_CHAT.md  ICP.md  INDEX.md  INTERNAL_LICENSE_ISSUANCE.md  K8S_RUNNER_SELF_SERVE.md  OBSERVABILITY_CONTRACT.md  OFFER.md  ONLINE_BOUTIQUE_FORCED_OPPORTUNITIES.md  ONLINE_BOUTIQUE_PROOF.md  OUTBOUND_BATCH.md  OUTREACH_CALL_20MIN.md  OUTREACH_EMAIL.md  OUTREACH_MESSAGES.md  OUTREACH_PACK.md  PASSPORTS.md  PATTERN_CATALOG.md  PLAYBOOKS.md  PROCUREMENT_PACK.md  PROJECT_MAP.md  (+20 more)
examples/: lightning_mvp.py
k8s/: trainer-demo-cpu.yaml  trainer-minimal.yaml
scripts/: dev-shell.sh  e2e-closed-loop-apply-k8s-gpu.sh  e2e-observe-k8s-gpu.sh  e2e-smoke-kind.sh  e2e-synthetic-proofs-replay.sh  e2e-trainer-chart-kind.sh  kind-bootstrap.sh  mk-release-all.sh  proof-matrix-replay.sh  pypi-smoke.sh  release_public.sh
tests/: conftest.py  test_assessment_classification.py  test_chords_recover_relock.py  test_cli_artifacts.py  test_cli_buyer_artifacts.py  test_cli_defaults.py  test_cli_doctor.py  test_cli_policy_scalar.py  (+79 more)
(+128 files in other folders)
