[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modekeeper"
version = "0.1.27"
description = "ModeKeeper: verify-first, customer-safe read-only agent; apply is licensed and gated"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

dependencies = [
  "cryptography>=42.0.0",
]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{name = "ModeKeeper"}]
keywords = ["mlops", "observability", "autotuning", "safety"]
classifiers = [
  "Programming Language :: Python :: 3",
]


[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4.8",
]

[project.scripts]
mk = "modekeeper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"modekeeper.passports.templates" = ["*.json"]
"modekeeper.chords" = ["*.json"]
"modekeeper.license" = ["*.json"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
